<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/no_data"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
           />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/temp_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="normal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/degree_symbol"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="normal" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/feels_like_layout"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/feels_like"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="normal"
                />


            <TextView
                android:id="@+id/feels_like_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="normal"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/degree_symbol"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="normal"
                />

        </LinearLayout>


        <TextView
            android:id="@+id/description_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="normal"
            android:gravity="center"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_btn"
            android:text="@string/save"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/widget_background"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

</RelativeLayout>