<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/grey_light"
    app:contentPadding="10dp"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/degree_symbol"
                android:layout_weight="1"
                android:textColor="@color/blue_dark"
                android:textSize="19sp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="@dimen/delete_button_size"
                android:layout_height="@dimen/delete_button_size"
                android:id="@+id/delete_btn"
                android:src="@drawable/round_delete_forever_white_48"
                android:background="@null"
                android:tint="@color/red"
                android:scaleType="fitCenter"
                />



        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/date_label_width"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/date"
                android:textColor="@color/blue_light"
                android:textSize="15sp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="1-1-2020"
                android:textColor="@color/blue_light"
                android:textSize="15sp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/details_btn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/details_button_height"
                android:layout_gravity="center"
                android:text="@string/more_details"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:backgroundTint="@color/blue_light"
                app:cornerRadius="28.6dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>